# OSI-CONIC

./: .gitignore  .travis.yml  Dependencies  Makefile.am  Makefile.in  README.md  compile.sh  configure  configure.ac  get_dependencies.sh  libtool  osiconic-uninstalled.pc.in  osiconic.pc.in
src/: Documentation.txt  LorentzCone.hpp  Makefile.am  Makefile.in  OsiCone.hpp  OsiConicCut.cpp  OsiConicCut.hpp  OsiConicCuts.cpp  OsiConicCuts.hpp  OsiConicSolverInterface.cpp  OsiConicSolverInterface.hpp  OsiLorentzCone.cpp  OsiLorentzCone.hpp  OsiScaledCone.hpp  README  config.h.in
